--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
 .item {
     display : flex;
     align-items : center;
+    border-bottom : 1.5px solid #F1F1F1;
 }
 
 
@@ -25,13 +26,13 @@ html {
 
 
 input:checked + p {
-    text-decoration : line-through 4px solid red ;
+    text-decoration : line-through 4px solid red;
 }
 
 
-input[type='checkbox'] {
+input[type="checkbox"] {
     margin : 20px;
-    cursor: pointer;
+    cursor : pointer;
 }
 
 
